tweaked the css to display better on fullscreen

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
             <p id= "nxt-lyrics"></p>
         </section>
         <br>
-        <button id="ply">play</button>
-        <button id="pse">pause</button>
-        <br>
-        <br>
-        <audio id="track" controls={true} src="/lyrics/patti labelle - here & now.mp3" type="mp3"></audio>
+        <section id="buttons-section">
+            <button id="ply">play</button>
+            <button id="pse">pause</button>
+            <br>
+            <br>
+            <audio id="track" src="/lyrics/patti labelle - here & now.mp3" type="mp3"></audio>
+        </section>
     </main>
     <script src="/lyrics/lyrics_tracker.js"></script>
 </body>
