Made the play button button toggle play/pause. Removed the pause button. Cleaned up code

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </section>
         <br>
         <section id="buttons-section">
-            <button id="ply">play</button>
-            <button id="pse">pause</button>
-            <button id="stp">stop</button>
+            <button id="ply">&#9658</button>
+            
+            <button id="stp"><b>&#9632</b></button>
             <br>
             <br>
             <audio id="track" src="patti labelle - here & now.mp3" type="mp3"></audio>
